--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "body-parser": "^1.20.2",
+    "debug": "^4.3.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
